@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - End a session
class Session {
  +Guid Id
  +DateTimeOffset ExpiresAt
  +DateTimeOffset? RevokedAt
  +IsLive(asOf: DateTimeOffset): bool
  +Revoke(asOf: DateTimeOffset): void
}
class RefreshToken {
  +Guid SessionId
  +string TokenHash
  +Guid? ReplacedByTokenId
  +IsActive(asOf: DateTimeOffset): bool
  +Rotate(id: Guid, asOf: DateTimeOffset): void
}
class SignOutCommandHandler {
  +Handle(command: SignOutCommand): Task
}
class RefreshSessionCommandHandler {
  +Handle(command: RefreshSessionCommand): Task<SessionResult>
}
Session "1" <-- "*" RefreshToken : binds to
SignOutCommandHandler ..> Session : revokes through store
RefreshSessionCommandHandler ..> RefreshToken : rotates through store
@enduml
